tests/machine/x/ocaml/string_index.error
stage: compile
error:
File "/workspace/mochi/tests/machine/x/ocaml/string_index.ml", line 4, characters 2-15:
4 |   print_endline List.nth s 1
      ^^^^^^^^^^^^^
Error: This function has type string -> unit
       It is applied to too many arguments; maybe you forgot a `;'.


Context (around line 4):
   2 | 
   3 | let () =
   4 |   print_endline List.nth s 1
   5 | 
