tests/machine/x/ocaml/string_index.ml
let s = "mochi"

let () =
  print_endline List.nth s 1
